--- a/web-app/package.json
+++ b/web-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "descarte",
+  "name": "web-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -27,7 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.1.17",
     "vite": "^7.2.4"
   }
 }
